# MyEngine

./: .gitignore  CMakeLists.txt
source/: EntryPoint.cpp
source/API/OpenGL/: OpenGL.cpp  OpenGL.h
source/Engine/: Main.cpp
source/Engine/Camera/: Camera.cpp  Camera.h
source/Engine/IO/: Resource.cpp  Resource.h  ResourceManager.cpp  ResourceManager.h  ResourceType.h
source/Engine/Render/: Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
source/Engine/Runtime/: DebugConsole.cpp  DebugConsole.h  Editor.cpp  Editor.h
source/Engine/Runtime/Interface/: Application.h  IApplication.h
source/Util/FileSystem/: File.cpp  File.h  FileSystem.cpp  FileSystem.h
source/Util/Header/: Common.h
source/Util/Logger/: Logger.cpp  Logger.h
